# simple-digital-asset-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  about.hbs  about.toml  deny.toml  specification.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
doc/: architecture-overview.md  component-specification.md  proposal-export-based-previews.md  proposal-photo-workflow-integration.md  qa-report.md  specification.md
doc/blog/: 2026-03-04-dam-erfahrungsbericht.md  2026-03-09-kontextmanagement.md  2026-03-19-testing-und-qualitaet.md  2026-03-24-web-ui-entwicklung.md  2026-03-29-ai-integration.md
doc/manual/: build-pdf.sh  build-search-filters-pdf.sh  cheat-sheet.tex  index.md  search-filters.md
doc/manual/developer/: 01-rest-api.md  02-module-reference.md  03-building-and-testing.md
doc/manual/reference/: 00-cli-conventions.md  01-setup-commands.md  02-ingest-commands.md  03-organize-commands.md  04-retrieve-commands.md  05-maintain-commands.md  06-search-filters.md  07-format-templates.md  08-configuration.md  09-data-model.md  10-vlm-models.md  11-licenses.md
doc/manual/user-guide/: 01-overview.md  02-setup.md  03-ingest.md  04-organize.md  05-browse-and-search.md  06-web-ui.md  07-maintenance.md  08-scripting.md  09-shell.md  10-organizing-and-culling.md  11-archive-lifecycle.md  11-tagging-guide.md  12-archive-lifecycle.md  12-visual-discovery.md
doc/proposals/: card-first-workflow.md  enhancements.md  idea-notebook.md  manual-i18n.md  proposal-ai-autotagging.md  proposal-contact-sheet.md  proposal-storage-workflow.md  proposal-stroll-page.md  proposal-vlm-integration.md  roadmap.md  similarity-browse-and-grouping.md  tag-hierarchy-expansion.md  user-guide-improvements.md
doc/proposals/archive/: idea-notebook.md  implemented-v2.5.md  proposal-ai-autotagging.md  proposal-contact-sheet.md  proposal-export-based-previews.md  proposal-future-enhancements.md  proposal-multilingual-text-search.md  proposal-pending-writeback.md  proposal-photo-workflow-integration.md  proposal-repl.md  proposal-storage-workflow.md  proposal-stroll-page.md  proposal-vlm-integration.md
doc/qa-report/: qa-report.md
doc/quickref/: build-tagging-pdf.sh  cheat-sheet.tex  search-filters.md  search-filters.tex  tagging.tex
scripts/: backup-audit.py  backup-catalog.sh  batch-rate-from-csv.py  fix-orphaned-xmp.py  fix-scattered-groups.py  maki_helpers.py  sync-backup.sh  tag-analysis.py
src/: ai.rs  asset_service.rs  catalog.rs  cli_output.rs  collection.rs  commands.rs  config.rs  contact_sheet.rs  content_store.rs  device_registry.rs  embedded_xmp.rs  embedding_store.rs  exif_reader.rs  face.rs  face_store.rs  lib.rs  main.rs  metadata_store.rs  model_manager.rs  preview.rs  query.rs  saved_search.rs  shell.rs  stack.rs  status.rs  tag_util.rs  vlm.rs  vocabulary.rs  xmp_reader.rs
src/asset_service/: ai.rs  cleanup.rs  dedup.rs  export.rs  fix.rs  import.rs  refresh.rs  relocate.rs  sync.rs  verify.rs  video.rs  volume.rs
src/catalog/: analytics.rs  asset_crud.rs  backup.rs  cleanup.rs  duplicates.rs  facets.rs  lookup.rs  rebuild.rs  recipe_crud.rs  recipe_query.rs  schema.rs  search_builder.rs  search_exec.rs  stats.rs  tags.rs  variant_crud.rs  volume.rs
src/models/: asset.rs  mod.rs  recipe.rs  variant.rs  volume.rs
src/web/: jobs.rs  mod.rs  routes.rs  static_assets.rs  templates.rs
src/web/routes/: ai.rs  assets.rs  browse.rs  calendar_map.rs  collections.rs  duplicates.rs  import.rs  jobs.rs  maintain.rs  media.rs  mod.rs  saved_search.rs  stacks.rs  stats.rs  tags.rs  volumes.rs
src/web/routes/ai/: embed.rs  faces.rs  mod.rs  similarity.rs  stroll.rs  tags.rs
src/web/static/: style.css
templates/: analytics.html  asset.html  backup.html  base.html  browse.html  collections.html  compare.html  date_fragment.html  description_fragment.html  duplicates.html  filter_bar.html  filter_bar_js.html  import_dialog.html  import_dialog_js.html  job_toast_js.html  lightbox.html  lightbox_js.html  maintain_dialog.html  maintain_dialog_js.html  name_fragment.html  people.html  preview_fragment.html  rating_fragment.html  recipes_fragment.html  results.html  saved_searches.html  stats.html  stroll.html  tags.html  tags_fragment.html  volumes.html
tests/: cli.rs
