[package]
name = "dam"
version = "1.5.0"
edition = "2021"
description = "A digital asset manager for large collections of images and videos"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
image = "0.25"
imageproc = { version = "0.26", default-features = false, features = ["text"] }
ab_glyph = "0.2"
lofty = "0.23"
kamadak-exif = "0.5"
quick-xml = "0.36"
regex = "1"
toml = "0.8"
glob-match = "0.2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
askama = "0.12"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
sha2 = "0.10"
