[package]
name = "maki"
version = "4.4.13"
edition = "2021"
description = "A digital asset manager for large collections of images and videos"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
image = "0.25"
imageproc = { version = "0.26", default-features = false, features = ["text"] }
ab_glyph = "0.2"
lofty = "0.24"
kamadak-exif = "0.5"
quick-xml = "0.36"
regex = "1"
toml = "0.8"
glob-match = "0.2"
unicode-normalization = "0.1"
rustyline = { version = "15", features = ["derive"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
askama = "0.12"
printpdf = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
ort = { version = "=2.0.0-rc.11", optional = true, default-features = false, features = ["std", "ndarray", "download-binaries", "tls-native", "copy-dylibs"] }
ndarray = { version = "0.17", optional = true }
tokenizers = { version = "0.20", optional = true, default-features = false, features = ["onig"] }

[features]
default = []
pro = ["ai"]
ai = ["ort", "ndarray", "tokenizers"]
ai-gpu = ["ai", "ort/coreml"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
sha2 = "0.10"
